--- a/dashboard-ui/public/index.html
+++ b/dashboard-ui/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Patient Readings application"
+      content="Bookstore Readings application"
     />
-    <title>Patient Readings</title>
+    <title>Bookstore Readings</title>
   </head>
   <body>
     <div id="root"></div>
